k8s/03-psql-production.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
  labels:
    app: psql
spec:
  minReadySeconds: 30
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: psql
      tier: backend
  template:
    metadata:
      labels:
        app: psql
        tier: backend
    spec:
      volumes:
        - name: psqldb
          persistentVolumeClaim:
            claimName: pvc-psql
      containers:
        - name: psql
          image: postgres
          volumeMounts:
            - mountPath: "/var/lib/postgresql/data"
              name: psqldb
              subPath: "postgres"
          ports:
            - containerPort: 5432
---
################################
###   SERVICE SECTION       ####
################################
apiVersion: v1
kind: Service
metadata:
  name: psql
  labels:
    app: psql
    tier: backend
spec:
  type: ClusterIP
  ports:
    - port: 5432
  selector:
    app: psql
    tier: backend
