k8s/04-django-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-api
  labels:
    app: api
    version: '0.0.1'
spec:
  selector:
    matchLabels:
      app: api
      tier: backend
  replicas: 2
  template:
    metadata:
      labels:
        app: api
        tier: backend
    spec:
      containers:
        - name: django-api
          resources:
            requests:
              memory: "128Mi"
              cpu: "200m"
            limits:
              memory: "256Mi"
              cpu: "500m"
          image: erickdsama/test_flink:v0.1
          ports:
            - containerPort: 8000
---
##########################################
### SERVICE OF API                  ######
##########################################
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    app: api
spec:
  type: ClusterIP
  ports:
    - targetPort: 8000
      port: 8000
  selector:
    app: api
    tier: backend
